--- a/src/index.css
+++ b/src/index.css
@@ -202,7 +202,7 @@ footer h2 {
     transform: translate(-80%, -130%)
   }
   .text-box{
-    font-size: 0.9rem;
+    font-size: 1rem;
     padding: 2%;
   }
   /* image grid styles */
@@ -235,5 +235,8 @@ footer h2 {
   float: none;
   /* border: #ff4a4a solid 4px; */
   padding-bottom: 4rem;
+}
+footer span{
+  font-size: 4vw;
 }
 }
